--- a/index.html
+++ b/index.html
@@ -37,22 +37,24 @@
     <div id="info">
         <div class="col-sm-12 text-center" style="border-bottom: dotted; color: #82bd03">
             <h3 id="name"></h3>
+            <h6 id="type"></h6>
         </div>
         <div class="col-sm-4" style="margin-top: 10px;">
-            <img id="icon" alt="">
+            <!-- <img id="icon" alt=""> -->
+            <span id="icon" style="width:100%"></span>
         </div> 
         <div class="col-sm-8 text-right media-middle">
             <a id="amap" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i>View in Google</a>
             <img id="aimg" width="100%">
         </div>
         
-        <div class="spacer-40"></div>
+        <div class="spacer"></div>
 
         <div class="col-sm-12">
             <pre id="hours" style="width: 100%; background-color: #82bd03; font-weight: bold;"></pre>
         </div>
         
-        <div class="spacer-40"></div>
+        <div class="spacer"></div>
 
         <div class="col-sm-12">
             <p id="comments" style="font-weight: bold;"></p>
